HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/OverrideAbstractMethod/Expected.uv
//! Expected diagnostic metadata for the OverrideAbstractMethod rejected-source specimen.

expectedDiagnostic("E-TYP-2501", "rule.14.Override-Abstract-Err")
